stylename1.css
.tieude {color: #d32f2f; font-weight: bold; font-size: 25pt; line-height: 1.5}
.noidung {color: #333; font-style: normal; font-size: 14pt;}
.border{
display: flex;
flex-direction: column;
height: 100vh;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}
.body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
.header{
flex: 15%;
background: url("images/file_00000000168c72088a10e1da28dec0ca.png") center;
background-size: cover;
align-items: center;
justify-content: center;
aspect-ratio: 6 / 1;
text-align: center;
}
.menu{
flex: 5%;
background-color: #2c3e50;
display: flex;
}
.menu a{
color: #ecf0f1;
padding: 15px 20px;
height: 100%;
display: flex;
text-align: center;
text-decoration: none;
transition: background-colour 0.3s ease;
}
.menu a:hover{
  background-color: 34495e;
}
.content{
flex: 70%;
background-color: #f9f9f9;
}
.content iframe{
  flex: 1;
  border: none;
  width: 100%;
  height: 100%;
}
.footer{
flex: 10%;
background-color: blue;
}

